--- a/pom.xml
+++ b/pom.xml
@@ -38,7 +38,7 @@
         <snapshotRepository>
             <id>github-snapshots</id>
             <name>oss.sonatype.org github Release Repository Snapshot Repository</name>
-            <url>http://oss.sonatype.org/content/repositories/github-snapshots/</url>
+            <url>https://oss.sonatype.org/content/repositories/github-snapshots/</url>
         </snapshotRepository>
     </distributionManagement>
     <profiles>
@@ -75,7 +75,7 @@
         <plugins>
             <plugin>
                 <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.2</version>
+                <version>3.5.1</version>
                 <configuration>
                     <source>1.7</source>
                     <target>1.7</target>
@@ -106,9 +106,9 @@
             </plugin>
             <plugin>
                 <artifactId>maven-release-plugin</artifactId>
-                <version>2.5.1</version>
+                <version>2.5.3</version>
                 <configuration>
-                    <preparationGoals>clean install</preparationGoals>
+                    <preparationGoals>clean tidy:pom com.theoryinpractise:googleformatter-maven-plugin:format install</preparationGoals>
                     <goals>deploy</goals>
                     <pushChanges>false</pushChanges>
                     <localCheckout>true</localCheckout>
@@ -116,29 +116,23 @@
                 </configuration>
             </plugin>
             <plugin>
-                <artifactId>maven-invoker-plugin</artifactId>
-                <version>1.9</version>
-                <configuration>
-                    <projectsDirectory>src/it</projectsDirectory>
-                    <cloneProjectsTo>${project.build.directory}/it</cloneProjectsTo>
-                    <pomIncludes>
-                        <pomInclude>*/pom.xml</pomInclude>
-                    </pomIncludes>
-                    <settingsFile>src/it/settings.xml</settingsFile>
-                    <localRepositoryPath>${project.build.directory}/local-repo</localRepositoryPath>
-                    <postBuildHookScript>verify.bsh</postBuildHookScript>
-                    <debug>true</debug>
-                </configuration>
-                <executions>
-                    <execution>
-                        <id>integration-test</id>
-                        <goals>
-                            <goal>install</goal>
-                            <goal>run</goal>
-                        </goals>
-                    </execution>
-                </executions>
-            </plugin>
+              <groupId>io.repaint.maven</groupId>
+              <artifactId>tiles-maven-plugin</artifactId>
+              <version>2.8</version>
+              <extensions>true</extensions>
+              <configuration>
+                <filtering>true</filtering>
+                <buildSmells>dependencies</buildSmells>
+              </configuration>
+              <executions>
+                <execution>
+                  <id>add-tile</id>
+                  <goals>
+                    <goal>attach-tile</goal>
+                  </goals>
+                </execution>
+              </executions>
+          </plugin>
         </plugins>
     </build>
 
