--- a/pom.xml
+++ b/pom.xml
@@ -38,9 +38,9 @@
             <url>http://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
         </repository>
         <snapshotRepository>
-            <id>github-snapshots</id>
-            <name>oss.sonatype.org github Release Repository Snapshot Repository</name>
-            <url>https://oss.sonatype.org/content/repositories/github-snapshots/</url>
+            <id>sonatype-snapshots</id>
+            <name>oss.sonatype.org Snapshot Repository</name>
+            <url>https://oss.sonatype.org/content/repositories/snapshots/</url>
         </snapshotRepository>
     </distributionManagement>
 
