--- a/pom.xml
+++ b/pom.xml
@@ -142,7 +142,7 @@
                     <allowTimestampedSnapshots>true</allowTimestampedSnapshots>
                 </configuration>
             </plugin>
-            <plugin>
+            <!--<plugin>
               <groupId>io.repaint.maven</groupId>
               <artifactId>tiles-maven-plugin</artifactId>
               <version>2.8</version>
@@ -159,7 +159,7 @@
                   </goals>
                 </execution>
               </executions>
-          </plugin>
+          </plugin>-->
         </plugins>
     </build>
 
