--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
     <groupId>com.theoryinpractise.frege</groupId>
     <artifactId>frege-maven-plugin</artifactId>
-    <version>1.0.8</version>
+    <version>1.0.9-SNAPSHOT</version>
     <packaging>maven-plugin</packaging>
 
     <name>frege-maven-plugin Maven Mojo</name>
@@ -29,7 +29,7 @@
         <connection>scm:git:git@github.com:talios/frege-maven-plugin.git</connection>
         <developerConnection>scm:git:git@github.com:talios/frege-maven-plugin.git</developerConnection>
         <url>http://github.com/talios/frege-maven-plugin</url>
-      <tag>frege-maven-plugin-1.0.8</tag>
+      <tag>HEAD</tag>
   </scm>
     <distributionManagement>
         <repository>
